--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Tailwind css</title>
 </head>
-<body>
-    
-    <div>
-        <p>Ready to Use Tailwind CSS Web Template</p>
-        <h1>TailWind Template for <span>App & softwware </span> Site. </h1>
-        <p>All in one TailWind Css site template for - App and Software sites Comes with all essential components.</p>
+<body class="bg-white font-sans antialiased">
+    <section class="relative max-w-7xl mx-auto px-6 py-20 lg:py-32 flex flex-col lg:flex-row items-center justify-between overflow-hidden"  >
+        <div class="w-full lg:w-1/2 z-10">
+        <p class="text-gray-800 font-semibold text-lg mb-4">Ready to Use Tailwind CSS Web Template</p>
+        <h1 class="text-2xl lg:text-2xl font-extrabold text-[#1a1a1a] leading-tight mb-6">TailWind Template for  <br><span  class=" text-indigo-400"   >App & software </span> Site. </h1>
+        <p class="text-gray-500 text-lg mb-10 max-w-md">All in one TailWind Css site template for - App and Software sites Comes with all essential components.</p>
         <div>
             <button> Download Now</button> 
-            <p>watch Demo See how it works </p>
+            <p>watch Demo </p>
+            <p>See how it works </p>
         </div>
         <div>
+
             <img src="./hero-light.png" alt="phone image ">
         </div>
-    </div>
+    </section>
 </body>
 </html>
