--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <title>Tailwind css</title>
 </head>
 <body class="bg-white font-sans antialiased">
@@ -12,10 +13,19 @@
         <p class="text-gray-800 font-semibold text-lg mb-4">Ready to Use Tailwind CSS Web Template</p>
         <h1 class="text-2xl lg:text-2xl font-extrabold text-[#1a1a1a] leading-tight mb-6">TailWind Template for  <br><span  class=" text-indigo-400"   >App & software </span> Site. </h1>
         <p class="text-gray-500 text-lg mb-10 max-w-md">All in one TailWind Css site template for - App and Software sites Comes with all essential components.</p>
-        <div>
-            <button> Download Now</button> 
-            <p>watch Demo </p>
-            <p>See how it works </p>
+        <div  class="flex items-center space-x-6">
+            <button  class="bg-[#1a1c2e] text-white px-8 py-4 rounded-md flex items-center transition duration-300"   > <span class="mr-3 border-r border-gray-600 pr-3">Download Now</span>  
+                 <i class="fa-brands fa-apple text-xl"></i>    </button> 
+                 <div class="flex items-center cursor-pointer group">
+          <div class="w-12 h-12 flex items-center justify-center border-2 border-gray-300 rounded-full  transition">
+            <i class="fa-solid fa-play text-gray-800"></i>
+          </div>
+          <div class="ml-4">
+            <p  class= "text-sm  text-gray-800 font-semibold  leading-none"  >watch Demo  </p> 
+             <p class="text-xs text-gray-500 font-semibold "> see how it works </p>
+            </div>
+        </div>
+        </div>
         </div>
         <div>
 
